Change List.of/Set.of to ImmutableList.of/ImmutableSet.of
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/parallel-cmc@43876 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c